linux/cicd/securehash/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securehash
  labels:
    app.kubernetes.io/part-of: securehash
