linux/cicd/securehash/k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: securehash
  labels:
    app.kubernetes.io/name: securehash-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: securehash
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: securehash-frontend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: securehash-frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: securehash

    spec:
      automountServiceAccountToken: false

      imagePullSecrets:
        - name: gitlab-registry-pull

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - securehash-frontend
              topologyKey: kubernetes.io/hostname

      containers:
        - name: frontend
          image: registry.domena.lab/devops-lab/securehash-lab/frontend:main
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false

          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: securehash
  labels:
    app.kubernetes.io/name: securehash-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: securehash
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: securehash-frontend

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
