linux/cicd/securehash/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securehash
  namespace: securehash
  labels:
    app.kubernetes.io/name: securehash
    app.kubernetes.io/part-of: securehash
  annotations:
    nginx.org/ssl-redirect: "true"
    nginx.org/http-redirect-code: "308"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - securehash.domena.lab
      secretName: securehash-tls

  rules:
    - host: securehash.domena.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
